# peanubudget-backend-old

./: .env.example  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  Dockerfile  README.md  kubernetes.yaml  main.tf  outputs.tf  pyproject.toml  terraform.tf  variables.tf
.devcontainer/: devcontainer.json  set-up-post-creation.sh
.github/workflows/: check-terraform-plan.yaml  deploy-app.yaml  lint-python-files.yaml  lint-python-types.yaml  run-pre-commit-hooks.yaml  test-app.yaml
app/: config.py  database.py  dependency.py  main.py
app/crud/: __init__.py  _account.py  _category.py  _crud.py  _named_crud.py  _payee.py  _transaction.py
app/model/: __init__.py  _account.py  _category.py  _model.py  _named_model.py  _payee.py  _transaction.py
app/router/: account.py  category.py  payee.py  transaction.py
app/test/router/: conftest.py  test_account.py  test_category.py  test_payee.py  test_transaction.py
figure/: database_entity_relationship_diagram.txt  infrastructure_architecture_diagram.drawio
kubernetes/: Chart.yaml  values.yaml
kubernetes/templates/: deployment.yaml  load-balancer.yaml  secret.yaml
script/: app-clean.sh  docker-build-image.sh  docker-run-container.sh  kubernetes-apply.sh  kubernetes-clean.sh  kubernetes-run.sh  kubernetes-start.sh  pre-commit-update-hooks.sh  python-format-files.sh  python-lint-files.sh  python-lint-types.sh
